add logs for all base unets, and all att unets except conT w/ bcedice loss

--- a/src/training_att_unet3d.ipynb
+++ b/src/training_att_unet3d.ipynb
@@ -73,21 +73,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "89"
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 14,
+   "outputs": [],
    "source": [
     "import gc\n",
     "torch.cuda.empty_cache()\n",
-    "gc.collect()"
+    "gc.collect()\n",
+    "#\n",
+    "# import os\n",
+    "# os.environ[\"PYTORCH_CUDA_ALLOC_CONF\"] = \"max_split_size_mb:10000\""
    ],
    "metadata": {
     "collapsed": false
@@ -146,10 +140,10 @@
       "    )\n",
       "  )\n",
       "  (ups): ModuleList(\n",
-      "    (0): Upsample(scale_factor=2.0, mode=trilinear)\n",
+      "    (0): ConvTranspose3d(1024, 512, kernel_size=(2, 2, 2), stride=(2, 2, 2))\n",
       "    (1): DoubleConv3D(\n",
       "      (conv): Sequential(\n",
-      "        (0): Conv3d(1536, 512, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
+      "        (0): Conv3d(1024, 512, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
       "        (1): BatchNorm3d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "        (2): ReLU(inplace=True)\n",
       "        (3): Conv3d(512, 512, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
@@ -157,10 +151,10 @@
       "        (5): ReLU(inplace=True)\n",
       "      )\n",
       "    )\n",
-      "    (2): Upsample(scale_factor=2.0, mode=trilinear)\n",
+      "    (2): ConvTranspose3d(512, 256, kernel_size=(2, 2, 2), stride=(2, 2, 2))\n",
       "    (3): DoubleConv3D(\n",
       "      (conv): Sequential(\n",
-      "        (0): Conv3d(768, 256, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
+      "        (0): Conv3d(512, 256, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
       "        (1): BatchNorm3d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "        (2): ReLU(inplace=True)\n",
       "        (3): Conv3d(256, 256, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
@@ -168,10 +162,10 @@
       "        (5): ReLU(inplace=True)\n",
       "      )\n",
       "    )\n",
-      "    (4): Upsample(scale_factor=2.0, mode=trilinear)\n",
+      "    (4): ConvTranspose3d(256, 128, kernel_size=(2, 2, 2), stride=(2, 2, 2))\n",
       "    (5): DoubleConv3D(\n",
       "      (conv): Sequential(\n",
-      "        (0): Conv3d(384, 128, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
+      "        (0): Conv3d(256, 128, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
       "        (1): BatchNorm3d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "        (2): ReLU(inplace=True)\n",
       "        (3): Conv3d(128, 128, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
@@ -179,10 +173,10 @@
       "        (5): ReLU(inplace=True)\n",
       "      )\n",
       "    )\n",
-      "    (6): Upsample(scale_factor=2.0, mode=trilinear)\n",
+      "    (6): ConvTranspose3d(128, 64, kernel_size=(2, 2, 2), stride=(2, 2, 2))\n",
       "    (7): DoubleConv3D(\n",
       "      (conv): Sequential(\n",
-      "        (0): Conv3d(192, 64, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
+      "        (0): Conv3d(128, 64, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
       "        (1): BatchNorm3d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "        (2): ReLU(inplace=True)\n",
       "        (3): Conv3d(64, 64, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
@@ -205,7 +199,7 @@
       "  (attention): ModuleList(\n",
       "    (0): AttentionBlock(\n",
       "      (W_g): Sequential(\n",
-      "        (0): Conv3d(1024, 512, kernel_size=(1, 1, 1), stride=(1, 1, 1))\n",
+      "        (0): Conv3d(512, 512, kernel_size=(1, 1, 1), stride=(1, 1, 1))\n",
       "        (1): BatchNorm3d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "      )\n",
       "      (W_x): Sequential(\n",
@@ -220,7 +214,7 @@
       "    )\n",
       "    (1): AttentionBlock(\n",
       "      (W_g): Sequential(\n",
-      "        (0): Conv3d(512, 256, kernel_size=(1, 1, 1), stride=(1, 1, 1))\n",
+      "        (0): Conv3d(256, 256, kernel_size=(1, 1, 1), stride=(1, 1, 1))\n",
       "        (1): BatchNorm3d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "      )\n",
       "      (W_x): Sequential(\n",
@@ -235,7 +229,7 @@
       "    )\n",
       "    (2): AttentionBlock(\n",
       "      (W_g): Sequential(\n",
-      "        (0): Conv3d(256, 128, kernel_size=(1, 1, 1), stride=(1, 1, 1))\n",
+      "        (0): Conv3d(128, 128, kernel_size=(1, 1, 1), stride=(1, 1, 1))\n",
       "        (1): BatchNorm3d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "      )\n",
       "      (W_x): Sequential(\n",
@@ -250,7 +244,7 @@
       "    )\n",
       "    (3): AttentionBlock(\n",
       "      (W_g): Sequential(\n",
-      "        (0): Conv3d(128, 64, kernel_size=(1, 1, 1), stride=(1, 1, 1))\n",
+      "        (0): Conv3d(64, 64, kernel_size=(1, 1, 1), stride=(1, 1, 1))\n",
       "        (1): BatchNorm3d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "      )\n",
       "      (W_x): Sequential(\n",
@@ -269,7 +263,7 @@
     }
    ],
    "source": [
-    "model = Attention3UNet(3, 3, features=[64, 128, 256, 512], up_sample=True).to(DEVICE)\n",
+    "model = Attention3UNet(3, 3, features=[64, 128, 256, 512], up_sample=False).to(DEVICE)\n",
     "print(model)"
    ],
    "metadata": {
@@ -281,7 +275,7 @@
    "execution_count": 8,
    "outputs": [],
    "source": [
-    "# load(model, \"weights/3D/3d_50e_adam_b4_dice\")"
+    "# load(model, \"weights/attention/att3d_100e_adam_b4_dice_c\")"
    ],
    "metadata": {
     "collapsed": false
@@ -300,14 +294,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total parameters = 95182159\n",
-      "total learnable parameters = 95182159\n"
+      "total parameters = 91005199\n",
+      "total learnable parameters = 91005199\n"
      ]
     }
    ],
@@ -322,13 +316,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "opt = torch.optim.Adam(model.parameters(), lr=LR)\n",
     "# loss = torch.nn.BCEWithLogitsLoss # cannot be used because there's a lot of imbalance anyway, so it is better to combine it with dice\n",
-    "# loss = BCEDiceLoss()\n",
-    "loss = DiceLoss()"
+    "loss = BCEDiceLoss()\n",
+    "# loss = DiceLoss()"
    ],
    "metadata": {
     "collapsed": false
@@ -336,13 +330,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cpu\n"
+      "cuda\n"
      ]
     }
    ],
@@ -355,20 +349,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "At epoch [1/100]: 100%|██████████| 56/56 [55:04<00:00, 59.01s/it, loss=0.968]\n",
-      "At epoch [2/100]: 100%|██████████| 56/56 [58:57<00:00, 63.16s/it, loss=0.928] \n",
-      "At epoch [3/100]: 100%|██████████| 56/56 [56:11<00:00, 60.20s/it, loss=0.976] \n",
-      "At epoch [4/100]: 100%|██████████| 56/56 [55:18<00:00, 59.25s/it, loss=0.813]\n",
-      "At epoch [5/100]: 100%|██████████| 56/56 [54:09<00:00, 58.02s/it, loss=0.876]\n",
-      "At epoch [6/100]: 100%|██████████| 56/56 [56:57<00:00, 61.03s/it, loss=0.918] \n",
-      "At epoch [7/100]: 100%|██████████| 56/56 [55:16<00:00, 59.22s/it, loss=0.909]\n",
-      "At epoch [8/100]:  14%|█▍        | 8/56 [08:10<49:04, 61.34s/it, loss=0.854]"
+      "  0%|          | 0/56 [00:02<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "OutOfMemoryError",
+     "evalue": "CUDA out of memory. Tried to allocate 64.00 MiB (GPU 0; 8.00 GiB total capacity; 7.16 GiB already allocated; 0 bytes free; 7.26 GiB reserved in total by PyTorch) If reserved memory is >> allocated memory try setting max_split_size_mb to avoid fragmentation.  See documentation for Memory Management and PYTORCH_CUDA_ALLOC_CONF",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mOutOfMemoryError\u001B[0m                          Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[15], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43mtrain\u001B[49m\u001B[43m(\u001B[49m\u001B[43mmodel\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mepochs\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mEPOCHS\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtraining_loader\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mtrain_dl\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mloss_fn\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mloss\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdevice\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mDEVICE\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43moptimizer\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mopt\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32mE:\\Research\\course research projects\\deep_learning\\braTS-2020\\src\\util\\training_utils.py:14\u001B[0m, in \u001B[0;36mtrain\u001B[1;34m(model, epochs, training_loader, loss_fn, device, optimizer, from_epoch)\u001B[0m\n\u001B[0;32m     12\u001B[0m image, mask \u001B[38;5;241m=\u001B[39m image\u001B[38;5;241m.\u001B[39mto(device), mask\u001B[38;5;241m.\u001B[39mto(device)\n\u001B[0;32m     13\u001B[0m \u001B[38;5;66;03m# forward pass\u001B[39;00m\n\u001B[1;32m---> 14\u001B[0m out \u001B[38;5;241m=\u001B[39m \u001B[43mmodel\u001B[49m\u001B[43m(\u001B[49m\u001B[43mimage\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     15\u001B[0m loss \u001B[38;5;241m=\u001B[39m loss_fn(out, mask)\n\u001B[0;32m     16\u001B[0m \u001B[38;5;66;03m# backward pass\u001B[39;00m\n",
+      "File \u001B[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\torch\\nn\\modules\\module.py:1194\u001B[0m, in \u001B[0;36mModule._call_impl\u001B[1;34m(self, *input, **kwargs)\u001B[0m\n\u001B[0;32m   1190\u001B[0m \u001B[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001B[39;00m\n\u001B[0;32m   1191\u001B[0m \u001B[38;5;66;03m# this function, and just call forward.\u001B[39;00m\n\u001B[0;32m   1192\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m (\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_backward_hooks \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_forward_hooks \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_forward_pre_hooks \u001B[38;5;129;01mor\u001B[39;00m _global_backward_hooks\n\u001B[0;32m   1193\u001B[0m         \u001B[38;5;129;01mor\u001B[39;00m _global_forward_hooks \u001B[38;5;129;01mor\u001B[39;00m _global_forward_pre_hooks):\n\u001B[1;32m-> 1194\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m forward_call(\u001B[38;5;241m*\u001B[39m\u001B[38;5;28minput\u001B[39m, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs)\n\u001B[0;32m   1195\u001B[0m \u001B[38;5;66;03m# Do not call functions when jit is used\u001B[39;00m\n\u001B[0;32m   1196\u001B[0m full_backward_hooks, non_full_backward_hooks \u001B[38;5;241m=\u001B[39m [], []\n",
+      "File \u001B[1;32mE:\\Research\\course research projects\\deep_learning\\braTS-2020\\src\\models\\Attention3DUNet.py:65\u001B[0m, in \u001B[0;36mAttention3UNet.forward\u001B[1;34m(self, inputs)\u001B[0m\n\u001B[0;32m     63\u001B[0m \u001B[38;5;66;03m# ---> DIFF START: the skip_connection acquired is the X_l in attention UNet paper, and x is G\u001B[39;00m\n\u001B[0;32m     64\u001B[0m skip_connection \u001B[38;5;241m=\u001B[39m skips\u001B[38;5;241m.\u001B[39mpop()  \u001B[38;5;66;03m# give me the last skip I added, to add it first on the ups\u001B[39;00m\n\u001B[1;32m---> 65\u001B[0m skip_connection \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mattention\u001B[49m\u001B[43m[\u001B[49m\u001B[43midx\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m/\u001B[39;49m\u001B[38;5;241;43m/\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;241;43m2\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m(\u001B[49m\u001B[43mx\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mskip_connection\u001B[49m\u001B[43m)\u001B[49m  \u001B[38;5;66;03m# (G,X) = (x, skip_connection) in here\u001B[39;00m\n\u001B[0;32m     66\u001B[0m \u001B[38;5;66;03m# <---- end of difference between attention and base 3D UNet\u001B[39;00m\n\u001B[0;32m     68\u001B[0m x \u001B[38;5;241m=\u001B[39m torch\u001B[38;5;241m.\u001B[39mcat((skip_connection, x), dim\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m)  \u001B[38;5;66;03m# dim 0 is batch, dim 1 is the channels\u001B[39;00m\n",
+      "File \u001B[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\torch\\nn\\modules\\module.py:1194\u001B[0m, in \u001B[0;36mModule._call_impl\u001B[1;34m(self, *input, **kwargs)\u001B[0m\n\u001B[0;32m   1190\u001B[0m \u001B[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001B[39;00m\n\u001B[0;32m   1191\u001B[0m \u001B[38;5;66;03m# this function, and just call forward.\u001B[39;00m\n\u001B[0;32m   1192\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m (\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_backward_hooks \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_forward_hooks \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_forward_pre_hooks \u001B[38;5;129;01mor\u001B[39;00m _global_backward_hooks\n\u001B[0;32m   1193\u001B[0m         \u001B[38;5;129;01mor\u001B[39;00m _global_forward_hooks \u001B[38;5;129;01mor\u001B[39;00m _global_forward_pre_hooks):\n\u001B[1;32m-> 1194\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m forward_call(\u001B[38;5;241m*\u001B[39m\u001B[38;5;28minput\u001B[39m, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs)\n\u001B[0;32m   1195\u001B[0m \u001B[38;5;66;03m# Do not call functions when jit is used\u001B[39;00m\n\u001B[0;32m   1196\u001B[0m full_backward_hooks, non_full_backward_hooks \u001B[38;5;241m=\u001B[39m [], []\n",
+      "File \u001B[1;32mE:\\Research\\course research projects\\deep_learning\\braTS-2020\\src\\models\\Attention3DUNet.py:29\u001B[0m, in \u001B[0;36mAttentionBlock.forward\u001B[1;34m(self, g, x)\u001B[0m\n\u001B[0;32m     27\u001B[0m g \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mW_g(g)\n\u001B[0;32m     28\u001B[0m x_o \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mW_x(x)\n\u001B[1;32m---> 29\u001B[0m relu_sum \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mrelu(\u001B[43mg\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m+\u001B[39;49m\u001B[43m \u001B[49m\u001B[43mx_o\u001B[49m)\n\u001B[0;32m     30\u001B[0m psi \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mpsi(relu_sum)\n\u001B[0;32m     31\u001B[0m psi \u001B[38;5;241m=\u001B[39m torch\u001B[38;5;241m.\u001B[39msigmoid(psi)\n",
+      "\u001B[1;31mOutOfMemoryError\u001B[0m: CUDA out of memory. Tried to allocate 64.00 MiB (GPU 0; 8.00 GiB total capacity; 7.16 GiB already allocated; 0 bytes free; 7.26 GiB reserved in total by PyTorch) If reserved memory is >> allocated memory try setting max_split_size_mb to avoid fragmentation.  See documentation for Memory Management and PYTORCH_CUDA_ALLOC_CONF"
      ]
     }
    ],
@@ -388,7 +391,11 @@
     "# B3\n",
     "# 100 DICE Results: Results: 115510440/116391936 with accuracy 99.3187 Dice score: 0.7661410570144653\n",
     "# 100 BCE-DICE Results: 115626234/116391936 with accuracy 99.3066 Dice score: 0.7499451041221619\n",
-    "# B4 100 DICE Results: Results: 115510440/116391936 with accuracy A Dice score: D"
+    "# B4\n",
+    "# 100 upsampler DICE Results: Results: 115510440/116391936 with accuracy 99.3227 Dice score: 0.769984781742096\n",
+    "# 100 upsampler BCE-DICE Results: Results: 115510440/116391936 with accuracy A Dice score: D\n",
+    "# 100 conv DICE Results: Results: 115510440/116391936 with accuracy 99.3277 Dice score: 0.7706514596939087\n",
+    "# 100 conv BCE-DICE Results: Results: 115510440/116391936 with accuracy A Dice score: D"
    ],
    "metadata": {
     "collapsed": false
