--- a/src/training_unet3d.ipynb
+++ b/src/training_unet3d.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,11 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "from util.data import get_dl, get_train_ds, get_val_ds\n",
-    "from util.training_utils import train, check_accuracy, save, load\n",
+    "from util.training_utils import train, check_accuracy, save, load, check_accuracy_v2\n",
     "from models.Base3DUNet import Base3DUNet\n",
     "from util.loss import DiceLoss, BCEDiceLoss"
    ],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "BATCH_SIZE = 4\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "LR = 0.0001\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -73,13 +73,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
-      "text/plain": "0"
+      "text/plain": "445"
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -216,24 +216,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "Error(s) in loading state_dict for Base3DUNet:\n\tUnexpected key(s) in state_dict: \"ups.0.weight\", \"ups.0.bias\", \"ups.2.weight\", \"ups.2.bias\", \"ups.4.weight\", \"ups.4.bias\", \"ups.6.weight\", \"ups.6.bias\". \n\tsize mismatch for ups.1.conv.0.weight: copying a param with shape torch.Size([512, 1024, 3, 3, 3]) from checkpoint, the shape in current model is torch.Size([512, 1536, 3, 3, 3]).\n\tsize mismatch for ups.3.conv.0.weight: copying a param with shape torch.Size([256, 512, 3, 3, 3]) from checkpoint, the shape in current model is torch.Size([256, 768, 3, 3, 3]).\n\tsize mismatch for ups.5.conv.0.weight: copying a param with shape torch.Size([128, 256, 3, 3, 3]) from checkpoint, the shape in current model is torch.Size([128, 384, 3, 3, 3]).\n\tsize mismatch for ups.7.conv.0.weight: copying a param with shape torch.Size([64, 128, 3, 3, 3]) from checkpoint, the shape in current model is torch.Size([64, 192, 3, 3, 3]).",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mRuntimeError\u001B[0m                              Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[12], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43mload\u001B[49m\u001B[43m(\u001B[49m\u001B[43mmodel\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mweights/3D/3d_100e_adam_b4_dice\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32mE:\\Research\\course research projects\\deep_learning\\braTS-2020\\src\\util\\training_utils.py:34\u001B[0m, in \u001B[0;36mload\u001B[1;34m(model, path, eval)\u001B[0m\n\u001B[0;32m     33\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mload\u001B[39m(model, path, \u001B[38;5;28meval\u001B[39m\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m):\n\u001B[1;32m---> 34\u001B[0m     \u001B[43mmodel\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mload_state_dict\u001B[49m\u001B[43m(\u001B[49m\u001B[43mtorch\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mload\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43mf\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;132;43;01m{\u001B[39;49;00m\u001B[43mpath\u001B[49m\u001B[38;5;132;43;01m}\u001B[39;49;00m\u001B[38;5;124;43m.pt\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     35\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28meval\u001B[39m:\n\u001B[0;32m     36\u001B[0m         model\u001B[38;5;241m.\u001B[39meval()\n",
-      "File \u001B[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\torch\\nn\\modules\\module.py:1671\u001B[0m, in \u001B[0;36mModule.load_state_dict\u001B[1;34m(self, state_dict, strict)\u001B[0m\n\u001B[0;32m   1666\u001B[0m         error_msgs\u001B[38;5;241m.\u001B[39minsert(\n\u001B[0;32m   1667\u001B[0m             \u001B[38;5;241m0\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mMissing key(s) in state_dict: \u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m. \u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;241m.\u001B[39mformat(\n\u001B[0;32m   1668\u001B[0m                 \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m, \u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;241m.\u001B[39mjoin(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;241m.\u001B[39mformat(k) \u001B[38;5;28;01mfor\u001B[39;00m k \u001B[38;5;129;01min\u001B[39;00m missing_keys)))\n\u001B[0;32m   1670\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mlen\u001B[39m(error_msgs) \u001B[38;5;241m>\u001B[39m \u001B[38;5;241m0\u001B[39m:\n\u001B[1;32m-> 1671\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mRuntimeError\u001B[39;00m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mError(s) in loading state_dict for \u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m:\u001B[39m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;130;01m\\t\u001B[39;00m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m'\u001B[39m\u001B[38;5;241m.\u001B[39mformat(\n\u001B[0;32m   1672\u001B[0m                        \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m\u001B[38;5;18m__class__\u001B[39m\u001B[38;5;241m.\u001B[39m\u001B[38;5;18m__name__\u001B[39m, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;130;01m\\t\u001B[39;00m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;241m.\u001B[39mjoin(error_msgs)))\n\u001B[0;32m   1673\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m _IncompatibleKeys(missing_keys, unexpected_keys)\n",
-      "\u001B[1;31mRuntimeError\u001B[0m: Error(s) in loading state_dict for Base3DUNet:\n\tUnexpected key(s) in state_dict: \"ups.0.weight\", \"ups.0.bias\", \"ups.2.weight\", \"ups.2.bias\", \"ups.4.weight\", \"ups.4.bias\", \"ups.6.weight\", \"ups.6.bias\". \n\tsize mismatch for ups.1.conv.0.weight: copying a param with shape torch.Size([512, 1024, 3, 3, 3]) from checkpoint, the shape in current model is torch.Size([512, 1536, 3, 3, 3]).\n\tsize mismatch for ups.3.conv.0.weight: copying a param with shape torch.Size([256, 512, 3, 3, 3]) from checkpoint, the shape in current model is torch.Size([256, 768, 3, 3, 3]).\n\tsize mismatch for ups.5.conv.0.weight: copying a param with shape torch.Size([128, 256, 3, 3, 3]) from checkpoint, the shape in current model is torch.Size([128, 384, 3, 3, 3]).\n\tsize mismatch for ups.7.conv.0.weight: copying a param with shape torch.Size([64, 128, 3, 3, 3]) from checkpoint, the shape in current model is torch.Size([64, 192, 3, 3, 3])."
-     ]
-    }
-   ],
+   "execution_count": 9,
+   "outputs": [],
    "source": [
-    "load(model, \"weights/3D/3d_100e_adam_b4_dice\")"
+    "load(model, \"weights/3D/3d_100e_adam_b4_dice_upsampler\")"
    ],
    "metadata": {
     "collapsed": false
@@ -417,7 +403,7 @@
     }
    ],
    "source": [
-    "train(model, epochs=EPOCHS, training_loader=train_dl, loss_fn=loss, device=DEVICE, optimizer=opt)"
+    "# train(model, epochs=EPOCHS, training_loader=train_dl, loss_fn=loss, device=DEVICE, optimizer=opt)"
    ],
    "metadata": {
     "collapsed": false
@@ -425,18 +411,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0\n"
+      " Accuracy (TC,ET,WT): \n",
+      " --> 99.3720 , 99.7061, 97.4900\n",
+      "Dice Score (TC,ET,WT): \n",
+      " 2.0 , 2.0, 2.0\n"
      ]
     }
    ],
    "source": [
-    "check_accuracy(val_dl,model,DEVICE)\n",
+    "check_accuracy_v2(val_dl,model,DEVICE)\n",
     "# convT\n",
     "# 100 DICE Results: Results: 115510440/116391936 with accuracy 99.3155 Dice score: 0.7647337317466736\n",
     "# 100 BCE-DICE Results: 115626234/116391936 with accuracy 99.3421 Dice score: 0.7765376567840576\n",
@@ -462,7 +451,7 @@
    ],
    "source": [
     "# saving sample\n",
-    "save(model,\"weights/3D/3d_100e_adam_b4_bce_dice_upsampler\")\n",
+    "# save(model,\"weights/3D/3d_100e_adam_b4_bce_dice_upsampler\")\n",
     "print(\"saved the model...\")"
    ],
    "metadata": {
