fix dice scores bugs

--- a/src/training_unet3d.ipynb
+++ b/src/training_unet3d.ipynb
@@ -77,7 +77,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "445"
+      "text/plain": "75"
      },
      "execution_count": 6,
      "metadata": {},
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "load(model, \"weights/3D/3d_100e_adam_b4_dice_upsampler\")"
@@ -411,16 +411,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       " Accuracy (TC,ET,WT): \n",
-      " --> 99.3720 , 99.7061, 97.4900\n",
+      " --> 99.3720 , 99.7061, 99.0616\n",
       "Dice Score (TC,ET,WT): \n",
-      " 2.0 , 2.0, 2.0\n"
+      " 0.8270809650421143 , 0.81601482629776, 0.8844817876815796\n"
      ]
     }
    ],
@@ -433,6 +433,15 @@
     "# 100 DICE Results: Results: 115510440/116391936 with accuracy 99.3394 Dice score: 0.7728903293609619\n",
     "# 100 BCE-DICE Results: 115626234/116391936 with accuracy 99.3208 Dice score: 0.7685501575469971"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
