add resizing for checking accuracy so results are comparable with previous papers

--- a/src/training_unet3d.ipynb
+++ b/src/training_unet3d.ipynb
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "from util.data import get_dl, get_train_ds, get_val_ds\n",
-    "from util.training_utils import train, check_accuracy, save, load, check_accuracy_v2\n",
+    "from util.training_utils import train, check_accuracy, save, load, check_accuracy_v2,  check_accuracy_v3\n",
     "from models.Base3DUNet import Base3DUNet\n",
     "from util.loss import DiceLoss, BCEDiceLoss"
    ],
@@ -59,13 +59,15 @@
      "output_type": "stream",
      "text": [
       "images: 221, masks: 221 \n",
+      "images: 148, masks: 148 \n",
       "images: 148, masks: 148 \n"
      ]
     }
    ],
    "source": [
     "train_dl = get_dl(get_train_ds(), BATCH_SIZE,nw=2)\n",
-    "val_dl = get_dl(get_val_ds(), BATCH_SIZE, nw=2)"
+    "val_dl = get_dl(get_val_ds(), BATCH_SIZE, nw=2)\n",
+    "val_dl_o = get_dl(get_val_ds(full_masks=True), BATCH_SIZE, nw=2)"
    ],
    "metadata": {
     "collapsed": false
@@ -77,7 +79,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "75"
+      "text/plain": "0"
      },
      "execution_count": 6,
      "metadata": {},
@@ -294,114 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "At epoch [1/100]: 100%|██████████| 56/56 [02:29<00:00,  2.67s/it, loss=1.5] \n",
-      "At epoch [2/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=1.48]\n",
-      "At epoch [3/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=1.48]\n",
-      "At epoch [4/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=1.4] \n",
-      "At epoch [5/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=1.31]\n",
-      "At epoch [6/100]: 100%|██████████| 56/56 [02:23<00:00,  2.57s/it, loss=1.29]\n",
-      "At epoch [7/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=1.25]\n",
-      "At epoch [8/100]: 100%|██████████| 56/56 [02:23<00:00,  2.57s/it, loss=1.21]\n",
-      "At epoch [9/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=1.24]\n",
-      "At epoch [10/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=1.2] \n",
-      "At epoch [11/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=1]   \n",
-      "At epoch [12/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.948]\n",
-      "At epoch [13/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=1.07] \n",
-      "At epoch [14/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.954]\n",
-      "At epoch [15/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=1.08] \n",
-      "At epoch [16/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.948]\n",
-      "At epoch [17/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.848]\n",
-      "At epoch [18/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.722]\n",
-      "At epoch [19/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.811]\n",
-      "At epoch [20/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.808]\n",
-      "At epoch [21/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.663]\n",
-      "At epoch [22/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.804]\n",
-      "At epoch [23/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.817]\n",
-      "At epoch [24/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.763]\n",
-      "At epoch [25/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.826]\n",
-      "At epoch [26/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.559]\n",
-      "At epoch [27/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.467]\n",
-      "At epoch [28/100]: 100%|██████████| 56/56 [02:23<00:00,  2.55s/it, loss=0.588]\n",
-      "At epoch [29/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.489]\n",
-      "At epoch [30/100]: 100%|██████████| 56/56 [02:23<00:00,  2.55s/it, loss=0.349]\n",
-      "At epoch [31/100]: 100%|██████████| 56/56 [02:23<00:00,  2.55s/it, loss=0.765]\n",
-      "At epoch [32/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.374]\n",
-      "At epoch [33/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.365]\n",
-      "At epoch [34/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.241]\n",
-      "At epoch [35/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.193]\n",
-      "At epoch [36/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.689]\n",
-      "At epoch [37/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.186]\n",
-      "At epoch [38/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.2]  \n",
-      "At epoch [39/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.213]\n",
-      "At epoch [40/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.198]\n",
-      "At epoch [41/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.161]\n",
-      "At epoch [42/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.227]\n",
-      "At epoch [43/100]: 100%|██████████| 56/56 [02:23<00:00,  2.57s/it, loss=0.161]\n",
-      "At epoch [44/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.193]\n",
-      "At epoch [45/100]: 100%|██████████| 56/56 [02:23<00:00,  2.57s/it, loss=0.45] \n",
-      "At epoch [46/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.582]\n",
-      "At epoch [47/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.259]\n",
-      "At epoch [48/100]: 100%|██████████| 56/56 [02:23<00:00,  2.57s/it, loss=0.194]\n",
-      "At epoch [49/100]: 100%|██████████| 56/56 [02:23<00:00,  2.57s/it, loss=0.271]\n",
-      "At epoch [50/100]: 100%|██████████| 56/56 [02:23<00:00,  2.57s/it, loss=0.121]\n",
-      "At epoch [51/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.287]\n",
-      "At epoch [52/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.155]\n",
-      "At epoch [53/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.22] \n",
-      "At epoch [54/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.244]\n",
-      "At epoch [55/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.137]\n",
-      "At epoch [56/100]: 100%|██████████| 56/56 [02:23<00:00,  2.57s/it, loss=0.136]\n",
-      "At epoch [57/100]: 100%|██████████| 56/56 [02:23<00:00,  2.57s/it, loss=0.204]\n",
-      "At epoch [58/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.108]\n",
-      "At epoch [59/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.344]\n",
-      "At epoch [60/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.141]\n",
-      "At epoch [61/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.143]\n",
-      "At epoch [62/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.188] \n",
-      "At epoch [63/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.132] \n",
-      "At epoch [64/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.0687]\n",
-      "At epoch [65/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.131] \n",
-      "At epoch [66/100]: 100%|██████████| 56/56 [02:27<00:00,  2.64s/it, loss=0.19]  \n",
-      "At epoch [67/100]: 100%|██████████| 56/56 [02:23<00:00,  2.57s/it, loss=0.178] \n",
-      "At epoch [68/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.116]\n",
-      "At epoch [69/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.176] \n",
-      "At epoch [70/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.188] \n",
-      "At epoch [71/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.236] \n",
-      "At epoch [72/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.249] \n",
-      "At epoch [73/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.165] \n",
-      "At epoch [74/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.198] \n",
-      "At epoch [75/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.142] \n",
-      "At epoch [76/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.14]  \n",
-      "At epoch [77/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.183] \n",
-      "At epoch [78/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.0983]\n",
-      "At epoch [79/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.202] \n",
-      "At epoch [80/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.114] \n",
-      "At epoch [81/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.215] \n",
-      "At epoch [82/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.108] \n",
-      "At epoch [83/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.102] \n",
-      "At epoch [84/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.14]  \n",
-      "At epoch [85/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.125] \n",
-      "At epoch [86/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.112] \n",
-      "At epoch [87/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.111] \n",
-      "At epoch [88/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.19]  \n",
-      "At epoch [89/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.115] \n",
-      "At epoch [90/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.106] \n",
-      "At epoch [91/100]: 100%|██████████| 56/56 [02:23<00:00,  2.57s/it, loss=0.0859]\n",
-      "At epoch [92/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.123] \n",
-      "At epoch [93/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.17]  \n",
-      "At epoch [94/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.147] \n",
-      "At epoch [95/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.125] \n",
-      "At epoch [96/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.11]  \n",
-      "At epoch [97/100]: 100%|██████████| 56/56 [02:25<00:00,  2.59s/it, loss=0.156] \n",
-      "At epoch [98/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.104] \n",
-      "At epoch [99/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.131] \n",
-      "At epoch [100/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.091] \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# train(model, epochs=EPOCHS, training_loader=train_dl, loss_fn=loss, device=DEVICE, optimizer=opt)"
    ],
@@ -411,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -420,7 +315,7 @@
       " Accuracy (TC,ET,WT): \n",
       " --> 99.3720 , 99.7061, 99.0616\n",
       "Dice Score (TC,ET,WT): \n",
-      " 0.8270809650421143 , 0.81601482629776, 0.8844817876815796\n"
+      " 0.820264995098114 , 0.8163532018661499, 0.8860259652137756\n"
      ]
     }
    ],
@@ -439,9 +334,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Accuracy (TC,ET,WT): \n",
+      " --> 99.3601 , 99.6902, 99.0066\n",
+      "Dice Score (TC,ET,WT): \n",
+      " 0.8251846432685852 , 0.8126899003982544, 0.8778696656227112\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_accuracy_v3(val_dl_o,model,DEVICE)"
+   ],
    "metadata": {
     "collapsed": false
    }
