add metrics, and calc for 3dUnet and attention Unet

--- a/src/training_unet3d.ipynb
+++ b/src/training_unet3d.ipynb
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "from util.data import get_dl, get_train_ds, get_val_ds\n",
-    "from util.training_utils import train, check_accuracy, save, load, check_accuracy_v2,  check_accuracy_v3\n",
+    "from util.training_utils import train, check_accuracy, save, load, check_accuracy_v2,  check_accuracy_v3, get_all_metrics, get_all_metrics_2\n",
     "from models.Base3DUNet import Base3DUNet\n",
     "from util.loss import DiceLoss, BCEDiceLoss"
    ],
@@ -79,7 +79,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "0"
+      "text/plain": "89"
      },
      "execution_count": 6,
      "metadata": {},
@@ -349,6 +349,130 @@
    ],
    "source": [
     "check_accuracy_v3(val_dl_o,model,DEVICE)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Accuracy (TC,ET,WT): \n",
+      " 99.3601 , 99.6902, 99.0066\n",
+      "Dice Score (TC,ET,WT): \n",
+      " 0.8231386542320251 , 0.8071435689926147, 0.8804966807365417\n",
+      "IoU Score (TC,ET,WT): \n",
+      " 0.7136725187301636 , 0.6832652688026428, 0.7896050810813904\n",
+      " Precision (TC,ET,WT): \n",
+      " --> 162.7276 , 320.3194, 66.9818\n",
+      " Recall (TC,ET,WT): \n",
+      " --> 138.6200 , 312.3200, 59.5818\n",
+      " F1-score (TC,ET,WT): \n",
+      " --> 149.7095 , 316.2691, 63.0655\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_all_metrics(val_dl_o,model,DEVICE)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "images: 148, masks: 148 \n",
+      " Accuracy (TC,ET,WT): \n",
+      " 99.3601 , 99.6902, 99.0066\n",
+      "Dice Score (TC,ET,WT): \n",
+      " 0.782164990901947 , 0.6888605356216431, 0.8394848108291626\n",
+      "IoU Score (TC,ET,WT): \n",
+      " 0.6852257251739502 , 0.577714741230011, 0.7514474987983704\n",
+      " Precision (TC,ET,WT): \n",
+      " --> 40.6821 , 80.0816, 16.7456\n",
+      " Recall (TC,ET,WT): \n",
+      " --> 34.6550 , 78.0800, 14.8954\n",
+      " F1-score (TC,ET,WT): \n",
+      " --> 37.4275 , 79.0681, 15.7664\n"
+     ]
+    }
+   ],
+   "source": [
+    "val_dl_oo = get_dl(get_val_ds(full_masks=True), 1, nw=2)\n",
+    "get_all_metrics(val_dl_oo,model,DEVICE)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "images: 148, masks: 148 \n",
+      " Accuracy (TC,ET,WT): \n",
+      " 99.3601 , 99.6902, 99.0066\n",
+      "Dice Score (TC,ET,WT): \n",
+      " 0.8139834403991699 , 0.7855698466300964, 0.8720433115959167\n",
+      "IoU Score (TC,ET,WT): \n",
+      " 0.7086735963821411 , 0.6589915156364441, 0.7794755101203918\n",
+      " Precision (TC,ET,WT): \n",
+      " --> 81.3637 , 160.1585, 33.4909\n",
+      " Recall (TC,ET,WT): \n",
+      " --> 69.3100 , 156.1600, 29.7909\n",
+      " F1-score (TC,ET,WT): \n",
+      " --> 74.8547 , 158.1340, 31.5327\n"
+     ]
+    }
+   ],
+   "source": [
+    "val_dl_oo = get_dl(get_val_ds(full_masks=True),2, nw=2)\n",
+    "get_all_metrics(val_dl_oo,model,DEVICE)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Accuracy (TC,ET,WT): \n",
+      " 99.3601 , 99.6902, 99.0066\n",
+      "Dice Score (TC,ET,WT): \n",
+      " 0.782162606716156 , 0.6888573169708252, 0.8394874334335327\n",
+      "IoU Score (TC,ET,WT): \n",
+      " 0.6852228045463562 , 0.5777103900909424, 0.751451313495636\n",
+      " Precision (TC,ET,WT): \n",
+      " --> 40.6819 , 80.0799, 16.7454\n",
+      " Recall (TC,ET,WT): \n",
+      " --> 34.6550 , 78.0800, 14.8955\n",
+      " F1-score (TC,ET,WT): \n",
+      " --> 37.4274 , 79.0673, 15.7664\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_all_metrics_2(val_dl_o,model,DEVICE)"
    ],
    "metadata": {
     "collapsed": false
